--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "gen": "node index.js"
   },
   "author": "AlFathir",
   "license": "MIT",
